# mtg-rules-chatgpt-plugin

./: .dockerignore  .env  .gitignore  Makefile  README.md  compose.yaml  fly.toml  mypy.ini  pyproject.toml
docker/: Dockerfile
mtg_rules_chatgpt_plugin/: cards.py  config.py  main.py  models.py  rules.py  schema.py  scryfall.py  types.py
mtg_rules_chatgpt_plugin/data/: ai-plugin.json
