[tool.poetry]
name = "mtg-rules-chatgpt-plugin"
version = "0.1.0"
description = ""
authors = ["Trevor Strieber <trevor@strieber.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.3.25"
databases = {extras = ["aiosqlite"], version = "^0.7.0"}
fastapi = "^0.95.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.dev-dependencies]
black = "^23.3.0"
ipdb = "^0.13.13"
isort = "^5.12.0"
mypy = "^1.3.0"
pdbpp = "^0.10.3"
ruff = "^0.0.270"
sqlalchemy-stubs = "^0.4"
types-requests = "^2.31.0.0"

[tool.poetry.scripts]
start = "mtg_rules_chatgpt_plugin.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  ".venv",
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
